<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="400dp"
            android:columnCount="3"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/cheeseBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Cheese"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/potatoBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:clickable="true"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Potato"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/onionBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:clickable="true"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Onion"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/flourBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Flour"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/tomatoBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Tomato"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/oilBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Oil"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/gravyBtn"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:checked="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Gravy"
                android:textSize="20sp"
                android:textStyle="bold" />

        </GridLayout>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="150dp"
            android:layout_height="74dp"
            android:layout_marginStart="36dp"
            android:onClick="buttonSearchOnclick"
            android:text="search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookMark"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_constraintVertical_bias="0.95" />

        <Button
            android:id="@+id/bookMark"
            android:layout_width="150dp"
            android:layout_height="74dp"
            android:clickable="false"
            android:onClick="buttonBookMarkOnclick"
            android:text="BookMark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/searchBtn"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_constraintVertical_bias="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Ingredients"
            android:textSize="34sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>