<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp3350.quickkitchen.presentation.RecipeListActivity">

    <ListView
        android:id="@+id/recipeList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:focusableInTouchMode="true"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="60dp"
            android:text="Recipe"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SearchView
            android:id="@+id/recipeSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:queryHint="Filter recipe name..." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="Calories"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SearchView
            android:id="@+id/caloriesSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:queryHint="Filter calories..." />

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/bookMark"
            android:layout_width="127dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@+id/nextBtn"
            android:text="Save to BookMark" />

        <TextView
            android:id="@+id/portion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="60dp"
            android:text="Portion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="116dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="4dp"
            android:onClick="buttonNextOnclick"
            android:text="next" />

        <Spinner
            android:id="@+id/portion_spinner"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-4dp"
            android:layout_marginEnd="-191dp"
            android:layout_toStartOf="@+id/portion"
            android:spinnerMode="dropdown" />


    </RelativeLayout>

</LinearLayout>
